<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.login.MainActivity" >

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="fill_parent"
        android:layout_margin="4dp"
        android:layout_gravity="center_vertical"
        android:gravity="center_vertical"
        android:layout_height="wrap_content">
        
        <TextView 
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="10pt"
            android:text="@string/tname"/>
        
        <EditText 
            android:background="@drawable/edittextbackground"
            android:id="@+id/className"
            android:layout_weight="0.7"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:inputType="text"
            android:hint="@string/nameHint"/>
        
    </LinearLayout>
        
    <LinearLayout 
        android:orientation="horizontal"
        android:layout_width="fill_parent"
        android:layout_margin="4dp"
        android:layout_gravity="center_vertical"
        android:gravity="center_vertical"
        android:layout_height="wrap_content">
        
        <TextView 
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="10pt"
            android:text="@string/tlocation"/>
        
        <EditText 
            android:background="@drawable/edittextbackground"
            android:id="@+id/password"
            android:layout_weight="0.7"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:inputType="text"
            android:hint="@string/locationHint"/>
        
    </LinearLayout>   

    
    <LinearLayout android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        android:layout_margin="1dp"
        android:orientation="horizontal">
    </LinearLayout> 
    
    <LinearLayout android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        android:layout_margin="1dp"
        android:orientation="horizontal">
        
        <Button android:id="@+id/classWeek"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/tclassWeek"
           android:background="@drawable/selector_bytton"
            android:textColor="#000000"
            android:onClick="reset"/>
    </LinearLayout>
  
</TableLayout>

