<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.login.MainActivity" >

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="fill_parent"
        android:layout_margin="4dp"
        android:layout_gravity="center_vertical"
        android:gravity="center_vertical"
        android:layout_height="wrap_content">
        
        <TextView 
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="10pt"
            android:text="@string/tname"/>
        
        <EditText 
            android:background="@drawable/edittextbackground"
            android:id="@+id/text_className"
            android:layout_weight="0.7"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:inputType="text"
            android:hint="(必填)"/>
        
    </LinearLayout>
        
    <LinearLayout 
        android:orientation="horizontal"
        android:layout_width="fill_parent"
        android:layout_margin="4dp"
        android:layout_gravity="center_vertical"
        android:gravity="center_vertical"
        android:layout_height="wrap_content">
        
        <TextView 
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="10pt"
            android:text="@string/tteacher"/>
        
        <EditText 
            android:background="@drawable/edittextbackground"
            android:id="@+id/text_teacher"
            android:layout_weight="0.7"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:inputType="text"
            android:hint="(选填)"/>
        
    </LinearLayout>   

    <LinearLayout 
        android:orientation="horizontal"
        android:layout_width="fill_parent"
        android:layout_margin="4dp"
        android:layout_gravity="center_vertical"
        android:gravity="center_vertical"
        android:layout_height="wrap_content">
        
        <TextView 
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="10pt"
            android:text="@string/tlocation"/>
        
        <EditText 
            android:background="@drawable/edittextbackground"
            android:id="@+id/text_classLocation"
            android:layout_weight="0.7"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:inputType="text"
            android:hint="(必填)"/>
        
    </LinearLayout>   
    
    <LinearLayout 
        android:orientation="horizontal"
        android:layout_width="fill_parent"
        android:layout_margin="4dp"
        android:layout_gravity="center_vertical"
        android:gravity="center_vertical"
        android:layout_height="wrap_content">
        
        <TextView 
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="10pt"
            android:text="上课时间:"/>
        
        <EditText 
            android:background="@drawable/edittextbackground"
            android:id="@+id/text_classTime"
            android:layout_weight="0.7"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:inputType="text"/>
        
    </LinearLayout>   
    
   
     <LinearLayout 
        android:orientation="horizontal"
        android:layout_width="fill_parent"
        android:layout_margin="4dp"
        android:layout_gravity="center_vertical"
        android:gravity="center_vertical"
        android:layout_height="wrap_content"
        android:focusable="true"   
        android:focusableInTouchMode="true">
        
        <TextView 
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="10pt"
            android:text="@string/tsubjectAttr"/>

        <Spinner
        	android:id="@+id/spiner_subjectAttr"
        	android:layout_width="fill_parent"
            android:layout_height="wrap_content" 
            android:paddingLeft="10dp"
            android:paddingTop="10dp"
            android:paddingRight="10dp"
            android:paddingBottom="10dp"/>
        
    </LinearLayout>   
    
     
    <LinearLayout 
        android:orientation="horizontal"
        android:layout_width="fill_parent"
        android:layout_margin="4dp"
        android:layout_gravity="center_vertical"
        android:gravity="center_vertical"
        android:layout_height="wrap_content"
        android:focusable="true"   
        android:focusableInTouchMode="true">
        
        <TextView 
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="10pt"
            android:text="@string/ttestAttr"/>
        
        <Spinner
        	android:id="@+id/spiner_testType"
        	android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:paddingLeft="10dp"
            android:paddingTop="10dp"
            android:paddingRight="10dp"
            android:paddingBottom="10dp"/>
        
    </LinearLayout>   
    
     
    <LinearLayout android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        android:layout_margin="4dp"
        android:orientation="horizontal">
        
        <Button android:id="@+id/text_weekRange"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="选定周数"
          	android:background="@drawable/selector_bytton"
            android:textColor="#000000"
            android:onClick="reset"/>
    </LinearLayout>
  
    <LinearLayout android:layout_width="fill_parent"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <Button android:id="@+id/clear"
            android:layout_weight="0.5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="重置"
            android:background="@drawable/selector_bytton"
            android:layout_margin="4dp"
            android:textColor="#000000"
            android:onClick="reset"/>
        
         <Button android:id="@+id/add"
            android:layout_weight="0.5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="添加"
            android:background="@drawable/selector_bytton"
            android:layout_margin="4dp"
            android:textColor="#000000"
            android:onClick="login"/>
    </LinearLayout>
</TableLayout>
