<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.login.MainActivity" >

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="fill_parent"
        android:layout_margin="4dp"
        android:layout_gravity="center_vertical"
        android:gravity="center_vertical"
        android:layout_height="wrap_content">
        
        <TextView 
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="10pt"
            android:text="@string/account"/>
        
        <EditText 
            android:background="@drawable/edittextbackground"
            android:id="@+id/account"
            android:layout_weight="0.7"
            android:layout_width="0dp"
            android:layout_marginLeft="30dp"
            android:layout_height="wrap_content"
            android:inputType="number"
            />
        
    </LinearLayout>
        
    <LinearLayout 
        android:orientation="horizontal"
        android:layout_width="fill_parent"
        android:layout_margin="4dp"
        android:layout_gravity="center_vertical"
        android:gravity="center_vertical"
        android:layout_height="wrap_content">
        
        <TextView 
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="10pt"
            android:text="@string/password"/>
        
        <EditText 
            android:background="@drawable/edittextbackground"
            android:id="@+id/password"
            android:layout_weight="0.7"
            android:layout_width="0dp"
            android:layout_marginLeft="30dp"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            />
        
    </LinearLayout>   
    
     <LinearLayout
     	android:layout_width="fill_parent"
     	android:layout_height="wrap_content"
     	android:layout_gravity="center_vertical"
     	android:layout_margin="4dp"
     	android:gravity="center_vertical"
     	android:orientation="horizontal" >

     	<ImageView
     		android:id="@+id/verify_code_image"
     		android:layout_width="120dp"
     		android:layout_height="50dp"
     		android:layout_marginLeft="74sp"
     		android:layout_marginRight="5dp"
     		android:layout_weight="0.10"
     		android:background="@drawable/edittextbackground" />

     	<Button
     		android:id="@+id/next_verify_code"
     		android:layout_width="wrap_content"
     		android:layout_height="wrap_content"
     		android:background="@drawable/selector_bytton"
     		android:text="看不清" />
     </LinearLayout>
    
     <LinearLayout 
        android:orientation="horizontal"
        android:layout_width="fill_parent"
        android:layout_margin="4dp"
        android:layout_gravity="center_vertical"
        android:gravity="center_vertical"
        android:layout_height="wrap_content">
        
        <TextView 
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="10pt"
            android:text="@string/verifycode"/>
        
        <EditText 
            android:background="@drawable/edittextbackground"
            android:id="@+id/vevify_code"
            android:layout_weight="0.7"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
             android:layout_marginLeft="8dp"
            android:inputType="text"
            />
        
    </LinearLayout>   
    
     

    
    <LinearLayout android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        android:layout_margin="1dp"
        android:orientation="horizontal">
    </LinearLayout> 
    
    <LinearLayout android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        android:layout_margin="1dp"
        android:orientation="horizontal">
        
        <Button android:id="@+id/update"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="更新信息"
           	android:background="@drawable/selector_bytton"
            android:textColor="#000000"
		/>
    </LinearLayout>
  
</TableLayout>

